updates to header, adding icon next to logo

--- a/popup.html
+++ b/popup.html
@@ -25,8 +25,11 @@
 <body class="bg-gray-100" style="box-sizing: border-box;">
   <div>
     <header class="sticky top-0">
-      <div class="flex items-center border-b bg-white shadow-sm">
-        <h1 class="text-base font-bold ml-4">SFMC Menu</h1>
+      <div class="flex items-center justify-center border-b bg-white shadow-sm">
+        <div class="flex-initial ml-2">
+          <img src="icon/icon128.png" class="inline w-6" />
+          <h1 class="text-sm font-bold inline ml-1">SFMC Menu</h1>
+        </div>
         <button id="settings" class="block border-l text-black w-16 h-12 flex items-center justify-center bg-white hover:bg-gray-50 focus:bg-gray-100">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z" />
@@ -36,59 +39,59 @@
       </div>
     </header>
     <main class="p-0">
-      <ul id="menu" class="space-y-0">
+      <ul id="menu" class="">
         <li>
-          <button id="button1" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button1" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Home
           </button>
         </li>
         <li>
-          <button id="button2" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button2" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Overview
           </button>
         </li>
         <li>
-          <button id="button3" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button3" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Email Studio
           </button>
         </li>
         <li>
-          <button id="button4" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button4" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Subscribers
           </button>
         </li>
         <li>
-          <button id="button5" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button5" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Cloud Pages
           </button>
         </li>
         <li>
-          <button id="button6" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button6" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Reporting
           </button>
         </li>
         <li>
-          <button id="button7" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button7" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Automation Studio
           </button>
         </li>
         <li>
-          <button id="button8" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button8" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Journey Builder
           </button>
         </li>
         <li>
-          <button id="button9" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button9" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Content Builder
           </button>
         </li>
         <li>
-          <button id="button10" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button10" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Contact Builder
           </button>
         </li>
         <li>
-          <button id="button11" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-semibold text-sm">
+          <button id="button11" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
             Admin
           </button>
         </li>
