--- a/popup.html
+++ b/popup.html
@@ -28,9 +28,9 @@
       <div class="flex items-center justify-center border-b bg-white shadow-sm">
         <div class="flex-initial ml-2">
           <img src="icon/icon128.png" class="inline w-6" />
-          <h1 class="text-sm font-bold inline ml-1">SFMC Menu</h1>
+          <h1 class="text-xs font-bold inline ml-1">SFMC Menu</h1>
         </div>
-        <button id="settings" class="block border-l text-black w-16 h-12 flex items-center justify-center bg-white hover:bg-gray-50 focus:bg-gray-100">
+        <button id="settings" class="block border-l text-black w-16 h-12 flex items-center justify-center bg-white hover:bg-gray-50 focus:bg-gray-100" title="Settings">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z" />
             <circle cx="12" cy="12" r="3" />
