--- a/popup.html
+++ b/popup.html
@@ -52,7 +52,7 @@
         </li>
         <li>
           <button id="button3" class="bg-white hover:bg-gray-50 hover:text-blue-500 focus:bg-gray-100 w-full p-4 border-b rounded shadow-sm font-medium text-sm">
-            Email Studio
+            Content
           </button>
         </li>
         <li>
@@ -145,7 +145,7 @@
                 checked
               />
               <label for="button3" class="ml-2 text-sm font-medium text-gray-700">
-                Email Studio
+                Content
               </label>
             </div>
             <div class="sortable-icon flex-1">
