--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,32 @@
       transition: background-color 0.3s ease, color 0.3s ease;
     }
 
+    /* Main menu button hover styles */
+    #menu button {
+      transition: background-color 0.2s ease;
+    }
+
+    #menu button:hover {
+      background-color: #f9fafb;
+    }
+
+    .dark #menu button:hover {
+      background-color: #2f2f2f !important;
+    }
+
+    #menu button a {
+      transition: color 0.2s ease;
+      color: inherit;
+    }
+
+    #menu button:hover a {
+      color: #3b82f6 !important;
+    }
+
+    .dark #menu button:hover a {
+      color: #60a5fa !important;
+    }
+
     /* Custom link form styles */
     .custom-link-form {
       display: none;
@@ -39,6 +65,81 @@
     #options {
       max-height: 500px;
       overflow-y: auto;
+    }
+
+    /* Custom link form dark mode styles */
+    .custom-link-form {
+      background-color: #f3f4f6;
+      border-color: #e5e7eb;
+    }
+
+    .dark .custom-link-form {
+      background-color: #212121;
+      border-color: #ffffff26;
+    }
+
+    .custom-link-form input {
+      background-color: white;
+      border-color: #e5e7eb;
+      color: #111827;
+    }
+
+    .dark .custom-link-form input {
+      background-color: #212121;
+      border-color: #ffffff26;
+      color: #ffffff;
+    }
+
+    .custom-link-form input:focus {
+      border-color: #3b82f6;
+      outline: none;
+      box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
+    }
+
+    .dark .custom-link-form input:focus {
+      border-color: #60a5fa;
+      box-shadow: 0 0 0 2px rgba(96, 165, 250, 0.1);
+    }
+
+    .custom-link-form input::placeholder {
+      color: #9ca3af;
+    }
+
+    .dark .custom-link-form input::placeholder {
+      color: #6b7280;
+    }
+
+    #cancel-custom-link {
+      color: #6b7280;
+    }
+
+    .dark #cancel-custom-link {
+      color: #9ca3af;
+    }
+
+    #cancel-custom-link:hover {
+      color: #374151;
+    }
+
+    .dark #cancel-custom-link:hover {
+      color: #d1d5db;
+    }
+
+    #save-custom-link {
+      background-color: #3b82f6;
+      color: white;
+    }
+
+    #save-custom-link:hover {
+      background-color: #2563eb;
+    }
+
+    .dark #save-custom-link {
+      background-color: #60a5fa;
+    }
+
+    .dark #save-custom-link:hover {
+      background-color: #3b82f6;
     }
   </style>
 </head>
@@ -61,67 +162,99 @@
     <main class="p-0">
       <ul id="menu" class="max-h-[500px] overflow-y-auto scrollbar-thin scrollbar-thumb-gray-300 dark:scrollbar-thumb-[#2f2f2f] scrollbar-track-transparent">
         <li>
-          <button id="button1" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Home
+          <button id="button1" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="https://mc.exacttarget.com/cloud/#app/Marketing%20Cloud%20Dashboard/" target="_blank" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Home</a>
           </button>
         </li>
         <li>
-          <button id="button2" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Overview
+          <button id="button2" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="https://mc.exacttarget.com/cloud/#app/Email/Default.aspx?ks=ks%23Overview" target="_blank" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Overview</a>
           </button>
         </li>
         <li>
-          <button id="button3" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Content
+          <button id="button3" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Content</a>
           </button>
         </li>
         <li>
-          <button id="button4" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Subscribers
+          <button id="button4" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Subscribers</a>
           </button>
         </li>
         <li>
-          <button id="button5" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Cloud Pages
+          <button id="button5" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Cloud Pages</a>
           </button>
         </li>
         <li>
-          <button id="button6" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Reporting
+          <button id="button6" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Reporting</a>
           </button>
         </li>
         <li>
-          <button id="button7" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Automation Studio
+          <button id="button7" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Automation Studio</a>
           </button>
         </li>
         <li>
-          <button id="button8" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Journey Builder
+          <button id="button8" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Journey Builder</a>
           </button>
         </li>
         <li>
-          <button id="button9" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Content Builder
+          <button id="button9" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Content Builder</a>
           </button>
         </li>
         <li>
-          <button id="button10" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Contact Builder
+          <button id="button10" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Contact Builder</a>
           </button>
         </li>
         <li>
-          <button id="button11" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] hover:text-[var(--accent-color)] focus:bg-gray-100 dark:focus:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
-            Admin
+          <button id="button11" class="bg-white dark:bg-[#212121] hover:bg-gray-50 dark:hover:bg-[#2f2f2f] w-full p-4 border-b border-gray-200 dark:border-[#ffffff26] font-medium text-sm">
+            <a href="#" class="w-full h-full flex justify-center items-center text-gray-900 dark:text-white hover:text-[var(--accent-color)]">Admin</a>
           </button>
         </li>
       </ul>
       <div id="options" class="hidden p-4 bg-white dark:bg-[#212121] border-t-0 border border-gray-200 dark:border-[#ffffff26] shadow-sm">
-
-
         <div class="pt-0">
-          <h3 class="text-xs font-medium text-gray-700 dark:text-white mb-2">Menu Items:</h3>
+          <div class="flex items-center justify-between mb-4">
+            <h3 class="text-xs font-medium text-gray-700 dark:text-white">Menu Items:</h3>
+            <button id="add-custom-link" class="flex items-center px-2 py-1 text-xs font-medium text-white bg-blue-500 hover:bg-blue-600 dark:bg-blue-600 dark:hover:bg-blue-700 rounded shadow-sm">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+              </svg>
+              Add Link
+            </button>
+          </div>
+
+  
+
+          <!-- Custom Links Form -->
+          <div id="custom-link-form" class="custom-link-form mb-4 p-2 bg-gray-50 dark:bg-[#2f2f2f] rounded border border-gray-200 dark:border-[#ffffff26]">
+            <div class="space-y-3">
+              <div>
+                <label for="custom-link-name" class="block text-xs font-medium text-gray-700 dark:text-white mb-1">Name:</label>
+                <input type="text" id="custom-link-name" class="w-full px-2 py-2 text-sm border border-gray-300 dark:border-[#ffffff26] rounded bg-white dark:bg-[#212121] text-gray-900 dark:text-white" placeholder="Enter link name">
+              </div>
+              <div>
+                <label for="custom-link-url" class="block text-xs font-medium text-gray-700 dark:text-white mb-1">URL:</label>
+                <input type="url" id="custom-link-url" class="w-full px-2 py-2 text-sm border border-gray-300 dark:border-[#ffffff26] rounded bg-white dark:bg-[#212121] text-gray-900 dark:text-white" placeholder="https://">
+              </div>
+              <div class="flex justify-end space-x-2">
+                <button id="cancel-custom-link" class="px-3 py-1 text-xs text-gray-600 dark:text-gray-300 hover:text-gray-800 dark:hover:text-white">
+                  Cancel
+                </button>
+                <button id="save-custom-link" class="px-3 py-1 text-xs text-white bg-blue-500 hover:bg-blue-600 rounded">
+                  Save
+                </button>
+              </div>
+            </div>
+          </div>
+
           <ul id="sortable-options" class="space-y-2">
+            <!-- Default menu items -->
             <li class="flex items-center justify-between p-2 bg-gray-100 dark:bg-[#212121] hover:bg-gray-200 dark:hover:bg-[#2f2f2f] border border-gray-200 dark:border-[#ffffff26] rounded shadow-sm translate duration-300 group">
               <div class="flex items-center flex-grow">
                 <input
